AI Copilote  IntegrityCheckoutTask modification